unpackaged/main/default/objects/Case/fields/Adjustment_Type__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Type__c</fullName>
    <label>Adjustment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appeal Code or Campaign Change</fullName>
            </value>
            <value>
                <fullName>Admin Reclass</fullName>
            </value>
            <value>
                <fullName>Allocation Change</fullName>
            </value>
            <value>
                <fullName>Amount Adjustment</fullName>
            </value>
            <value>
                <fullName>Bank Adjustment</fullName>
            </value>
            <value>
                <fullName>Close Date Adjustment</fullName>
            </value>
            <value>
                <fullName>Entity Reclass</fullName>
            </value>
            <value>
                <fullName>Invalid/Gift Reversal</fullName>
            </value>
            <value>
                <fullName>Hard/Soft Credit Adjustment</fullName>
            </value>
            <value>
                <fullName>Pledge Installment Update</fullName>
            </value>
            <value>
                <fullName>Transaction Type Change</fullName>
            </value>
            <value>
                <fullName>Write Off</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>