unpackaged/main/default/objects/Case/fields/Case_Topic__c.field-meta.xml
<CustomField>
    <fullName>Case_Topic__c</fullName>
    <description>Heller created 2021</description>
    <inlineHelpText>Choose the Case Topic that most closely aligns with the Case</inlineHelpText>
    <label>Case Topic</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Account Request (Non-AD/Exchange)</fullName>
            </value>
            <value>
                <fullName>Activism</fullName>
            </value>
            <value>
                <fullName>AD/Exchange Admin</fullName>
            </value>
            <value>
                <fullName>Animal Testing</fullName>
            </value>
            <value>
                <fullName>Annual Report Listing</fullName>
            </value>
            <value>
                <fullName>Backup/Restore Request</fullName>
            </value>
            <value>
                <fullName>Becoming a Sustainer</fullName>
            </value>
            <value>
                <fullName>Business Portal</fullName>
            </value>
            <value>
                <fullName>BYOD Request</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Catalyst Circle</fullName>
            </value>
            <value>
                <fullName>Cease Contact</fullName>
            </value>
            <value>
                <fullName>Change Amount</fullName>
            </value>
            <value>
                <fullName>Change Request</fullName>
            </value>
            <value>
                <fullName>Climate - General</fullName>
            </value>
            <value>
                <fullName>Complaints</fullName>
            </value>
            <value>
                <fullName>Contact Information Update</fullName>
            </value>
            <value>
                <fullName>Corporate Partnerships</fullName>
            </value>
            <value>
                <fullName>Credit Card Update</fullName>
            </value>
            <value>
                <fullName>Cultivation</fullName>
            </value>
            <value>
                <fullName>Deceased Donor</fullName>
            </value>
            <value>
                <fullName>Defend Our Future</fullName>
            </value>
            <value>
                <fullName>DLO</fullName>
            </value>
            <value>
                <fullName>Donation History Inquiry</fullName>
            </value>
            <value>
                <fullName>Donor Error</fullName>
            </value>
            <value>
                <fullName>Donor Request</fullName>
            </value>
            <value>
                <fullName>Duplicate Record</fullName>
            </value>
            <value>
                <fullName>Duplicate Sustainer</fullName>
            </value>
            <value>
                <fullName>Ecosystems - General</fullName>
            </value>
            <value>
                <fullName>EDAction Fund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>