unpackaged/main/default/objects/Case/fields/Contact_Constituency__c.field-meta.xml
<CustomField>
    <fullName>Contact_Constituency__c</fullName>
    <description>Returns Constituency of related Contact.</description>
    <formula>Contact.Constituency_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns Constituency of related Contact.</inlineHelpText>
    <label>Contact Constituency</label>
    <type>Text</type>
</CustomField>