unpackaged/main/default/objects/Case/fields/Contact_Sub_Constituency__c.field-meta.xml
<CustomField>
    <fullName>Contact_Sub_Constituency__c</fullName>
    <description>Returns Sub-Constituency of related Contact.</description>
    <formula>Contact.Sub_Constituency_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns Sub-Constituency of related Contact.</inlineHelpText>
    <label>Contact Sub-Constituency</label>
    <type>Text</type>
</CustomField>