unpackaged/main/default/objects/Case/fields/Created_in_NetSuite_By__c.field-meta.xml
<CustomField>
    <fullName>Created_in_NetSuite_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created as a part of 2023 R4 enhancements (US-868). Used on GP Fund Request Cases; is entered after the Case is created and the ERPSupport ticket is completed. Either the Case Owner or the Finance user will go into the Case to enter the user who created the Fund in NetSuite</description>
    <label>Created in NetSuite By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>