unpackaged/main/default/objects/Case/fields/Created_in_NetSuite_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_in_NetSuite_Date__c</fullName>
    <description>Created as a part of 2023 R4 enhancements (US-868). Used on GP Fund Request Cases; is entered after the Case is created and the ERPSupport ticket is completed. Either the Case Owner or the Finance user will go into the Case to enter the date the Fund was created in NetSuite</description>
    <label>Created in NetSuite Date</label>
    <type>Date</type>
</CustomField>