unpackaged/main/default/objects/Case/fields/Desired_Output__c.field-meta.xml
<CustomField>
    <fullName>Desired_Output__c</fullName>
    <description>Used for Request Cases to get a list of columns needed for report requests</description>
    <inlineHelpText>For Report Requests only: the fields needed in the report output</inlineHelpText>
    <label>Desired Output Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>