unpackaged/main/default/objects/Case/fields/Development_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Development_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created as a part of 2023 R4 enhancements (US-717, 741, 868). Used on a few GP Case Reasons (fund, donor agreements, grant approvals). Indicates which dev coordinator is point on the request</description>
    <label>Development Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>