unpackaged/main/default/objects/Case/fields/Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis__c</fullName>
    <label>Diagnosis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Banned Corporation</fullName>
            </value>
            <value>
                <fullName>Donor error</fullName>
            </value>
            <value>
                <fullName>Donor error - recurring gift</fullName>
            </value>
            <value>
                <fullName>EDF error</fullName>
            </value>
            <value>
                <fullName>EDF test</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Technical error- multiple charge</fullName>
            </value>
            <value>
                <fullName>Vendor error</fullName>
            </value>
            <value>
                <fullName>Vendor error - multiple charge</fullName>
            </value>
            <value>
                <fullName>Wrong Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>