unpackaged/main/default/objects/Case/fields/Donor_Fund_Type__c.field-meta.xml
<CustomField>
    <fullName>Donor_Fund_Type__c</fullName>
    <description>Used for GP Fund Request Cases; manually entered by the submitter</description>
    <inlineHelpText>If the funder has imposed an indirect cap, please submit a request for a new Grant instead of a Single-Donor Fund.</inlineHelpText>
    <label>Donor Fund Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single-Donor</fullName>
            </value>
            <value>
                <fullName>Multi-Donor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>