unpackaged/main/default/objects/Case/fields/EDF_Role__c.field-meta.xml
<CustomField>
    <fullName>EDF_Role__c</fullName>
    <description>Entered upon case creation. Gets passed to the equivalent field on Opp when the case is Closed - Resolved.</description>
    <inlineHelpText>Select “Prime” if EDF is the lead organization on the award. Select “Sub-Awardee” if EDF is a partner under another organization.</inlineHelpText>
    <label>EDF Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prime</fullName>
            </value>
            <value>
                <fullName>Sub-Awardee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>