unpackaged/main/default/objects/Case/fields/Endowment__c.field-meta.xml
<CustomField>
    <fullName>Endowment__c</fullName>
    <description>Used for GP Fund Request Cases; manually entered by the Case submitter</description>
    <label>Endowment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>