unpackaged/main/default/objects/Case/fields/ExistingReportOrDashboard__c.field-meta.xml
<CustomField>
    <fullName>ExistingReportOrDashboard__c</fullName>
    <description>Used for report/dashboard-related Request Cases</description>
    <inlineHelpText>Link existing reports or dashboards to be updated or referenced for the Request</inlineHelpText>
    <label>Link to Existing Report or Dashboard</label>
    <type>Url</type>
</CustomField>