unpackaged/main/default/objects/Case/fields/FinOps_Lead__c.field-meta.xml
<CustomField>
    <fullName>FinOps_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FinOps Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>