unpackaged/main/default/objects/Case/fields/Flow_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Flow_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to trigger assignment rules via Flow automation for instances when UI does not allow selection of standard assignment rule checkbox. IE global or quick actions.</description>
    <label>Flow Assignment</label>
    <type>Checkbox</type>
</CustomField>