unpackaged/main/default/objects/Case/fields/Fund_Administrator__c.field-meta.xml
<CustomField>
    <fullName>Fund_Administrator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for GP Fund Request Cases; tracks the Finance or Mission Finance user that's point on the fund. Value is included in the email template that goes to ERPSupport upon the case getting closed</description>
    <label>Fund Administrator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Fund_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>