unpackaged/main/default/objects/Case/fields/Grant_Lead__c.field-meta.xml
<CustomField>
    <fullName>Grant_Lead__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Entered upon case creation. Gets passed to the equivalent field on Opp when the case is Closed - Resolved.Should eventually get moved to Case Teams</description>
    <inlineHelpText>EDF Mission staff member leading project implementation.</inlineHelpText>
    <label>Grant Lead</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>