unpackaged/main/default/objects/Case/fields/Grant_Manager__c.field-meta.xml
<CustomField>
    <fullName>Grant_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created as a part of 2023 R4 enhancements (US-717). Used for Grant Approval Cases and entered upon creation; is a user lookup that tracks which Mission Finance user is responsible for managing the grant that's being requested. Gets passed to the equivalent field on Opp when the case is Closed - Approved/Resolved, and should be in sync with the same field in NetSuite. should eventually get moved to Case Teams</description>
    <inlineHelpText>Member of Mission Finance team. Please verify prior to submitting grant approval.</inlineHelpText>
    <label>Grant Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases4</relationshipName>
    <type>Lookup</type>
</CustomField>