unpackaged/main/default/objects/Case/fields/Grant_Name__c.field-meta.xml
<CustomField>
    <fullName>Grant_Name__c</fullName>
    <description>Manually entered by the user submitting the Grant Approval Case. Once the Case is approved, a flow passes this value into the Grant Name field on the Opp, which triggers the Netsuite integration and propogates the Grant Name to the GAU Allocation</description>
    <inlineHelpText>EX. GR_NORAD_Deforestation_2016to2020</inlineHelpText>
    <label>Grant Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>