unpackaged/main/default/objects/Case/fields/Grant_Number__c.field-meta.xml
<CustomField>
    <fullName>Grant_Number__c</fullName>
    <description>Created as a part of 2023 R4 enhancements (US-717). Entered manually by users if they have the award when they're submitting the case. gets passed to the equivalent field on Opp when the case is Closed - Approved/Resolved.</description>
    <inlineHelpText>Identifying number found in the awarding document of most grants and contracts.</inlineHelpText>
    <label>Grant Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>