unpackaged/main/default/objects/Case/fields/Grant_Term_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Grant_Term_End_Date__c</fullName>
    <description>Created as a part of 2023 R4 enhancements (US-717). Entered upon case creation if the submitter has the award at the point of requesting an approval. Gets passed to the equivalent field on Opp when the case is Closed - Approved/Resolved.</description>
    <label>Grant Term End Date</label>
    <type>Date</type>
</CustomField>