unpackaged/main/default/objects/Case/fields/Indirect_Amount__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Amount__c</fullName>
    <label>Indirect Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>