unpackaged/main/default/objects/Case/fields/Indirect_Cap_Donor_Imposed__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Cap_Donor_Imposed__c</fullName>
    <label>Indirect Cap Donor Imposed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>