unpackaged/main/default/objects/Case/fields/Indirect_Rate__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Rate__c</fullName>
    <inlineHelpText>If there is no donor imposed indirect rate, enter the EDF standard rate of 27.5%.</inlineHelpText>
    <label>Indirect Rate %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>