unpackaged/main/default/objects/Case/fields/LCRM_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>LCRM_Case_Number__c</fullName>
    <label>LCRM Case Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>