unpackaged/main/default/objects/Case/fields/New_Area_of_Work__c.field-meta.xml
<CustomField>
    <fullName>New_Area_of_Work__c</fullName>
    <description>Used for GP Fund Request Cases; the field is controlling the "New Area of Work Approved" field</description>
    <label>New Area of Work</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>