unpackaged/main/default/objects/Case/fields/New_Area_of_Work_Approved__c.field-meta.xml
<CustomField>
    <fullName>New_Area_of_Work_Approved__c</fullName>
    <description>Was the new area of work approved?  Dependent on the "New Area of Work" field value.</description>
    <inlineHelpText>If the new area of work was approved earlier in the proposal process, you do not need to reaffirm, just select "yes".</inlineHelpText>
    <label>New Area of Work Approved</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>New_Area_of_Work__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>