unpackaged/main/default/objects/Case/fields/New_Fund_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Fund_Name__c</fullName>
    <description>Used for GP Fund Request Cases; manually entered by the Case submitter.</description>
    <label>New Fund Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>