unpackaged/main/default/objects/Case/fields/New_Fund_Requested__c.field-meta.xml
<CustomField>
    <fullName>New_Fund_Requested__c</fullName>
    <description>Created as a part of 2023 R4 enhancements (US-717). Used for Grant Approval Cases; manually entered by the Case submitter. Has no automated system connection to a New Fund Request Case.</description>
    <label>New Fund Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>