unpackaged/main/default/objects/Case/fields/New_Originating_Currency__c.field-meta.xml
<CustomField>
    <fullName>New_Originating_Currency__c</fullName>
    <description>Created as a part of 2023 R4 enhancements (US-717). Used for Gift Processing "Grant Approval" Cases.</description>
    <inlineHelpText>Enter "yes" if originating currency does not current exist in NetSuite/Salesforce</inlineHelpText>
    <label>New Originating Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>