unpackaged/main/default/objects/Case/fields/Opportunitity_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunitity_Close_Date__c</fullName>
    <formula>Opportunity__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunitity Close Date</label>
    <type>Date</type>
</CustomField>