unpackaged/main/default/objects/Case/fields/Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Amount__c</fullName>
    <inlineHelpText>This field contains the value of the Opportunity prior to any refund/adjustments.</inlineHelpText>
    <label>Opportunity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>