unpackaged/main/default/objects/Case/fields/Originating_Currency__c.field-meta.xml
<CustomField>
    <fullName>Originating_Currency__c</fullName>
    <description>Created as a part of 2023 R4 enhancements (US-717). Entered upon case creation if the submitter has the award at the point of requesting an approval. Gets passed to the equivalent field on Opp when the case is Closed - Approved/Resolved. Only populated for non-USD opps.</description>
    <inlineHelpText>Complete if award amount is in a currency other than USD.</inlineHelpText>
    <label>Originating Currency</label>
    <length>40</length>
    <type>Text</type>
</CustomField>