unpackaged/main/default/objects/Case/fields/Originating_Currency_Amount__c.field-meta.xml
<CustomField>
    <fullName>Originating_Currency_Amount__c</fullName>
    <description>Created as a part of 2023 R4 enhancements (US-717). Entered upon case creation if the submitter has the award at the point of requesting a Grant approval. Gets passed to the equivalent field on Opp when the case is Closed - Resolved. Only populated for non-USD opps.</description>
    <inlineHelpText>Should only be populated if the Originating Currency isn't USD</inlineHelpText>
    <label>Originating Currency Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>