unpackaged/main/default/objects/Case/fields/PointOfContact__c.field-meta.xml
<CustomField>
    <fullName>PointOfContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User lookup that Development users for their Request Cases to indicate the primary point person for a Case. Defaults to the requestor when Case is created through actions.</description>
    <inlineHelpText>The person that can clarify or answer questions about this Request</inlineHelpText>
    <label>Point of Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>