unpackaged/main/default/objects/Case/fields/Primary_Team__c.field-meta.xml
<CustomField>
    <fullName>Primary_Team__c</fullName>
    <description>Used for Request Cases</description>
    <inlineHelpText>The team that is requesting, or will primarily benefit from this Request. If it is more than one team, please choose one.</inlineHelpText>
    <label>Primary Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Major Gifts</fullName>
            </value>
            <value>
                <fullName>Institutional Giving</fullName>
            </value>
            <value>
                <fullName>Government Partnerships</fullName>
            </value>
            <value>
                <fullName>Catalyst Circle</fullName>
            </value>
            <value>
                <fullName>Planned Giving</fullName>
            </value>
            <value>
                <fullName>Membership</fullName>
            </value>
            <value>
                <fullName>Donor Engagement</fullName>
            </value>
            <value>
                <fullName>Development Finance</fullName>
            </value>
            <value>
                <fullName>Prospect Research</fullName>
            </value>
            <value>
                <fullName>Information &amp; Strategy</fullName>
            </value>
            <value>
                <fullName>Gift Administration &amp; Stewardship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>