unpackaged/main/default/objects/Case/fields/Program_Fund_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Program_Fund_Hierarchy__c</fullName>
    <inlineHelpText>EX: Climate : Global Climate : Reducing Deforestation.</inlineHelpText>
    <label>Program/Fund Hierarchy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>