unpackaged/main/default/objects/Case/fields/Program_Officer__c.field-meta.xml
<CustomField>
    <fullName>Program_Officer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Entered upon case creation. Gets passed to the equivalent field on Opp when the case is Closed - Resolved. Tracks the staff member we're working with at the grantmaking org; not EDF staff.</description>
    <inlineHelpText>Staff member(s) overseeing award at grantmaking institution.</inlineHelpText>
    <label>Program Officer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Program Officer)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>