unpackaged/main/default/objects/Case/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <description>Used for GP Fund Request and Grant Approval Cases; manually entered by the submitter using language from Agreement.</description>
    <inlineHelpText>Language from agreement if available.</inlineHelpText>
    <label>Purpose</label>
    <type>TextArea</type>
</CustomField>