unpackaged/main/default/objects/Case/fields/Refund_Method__c.field-meta.xml
<CustomField>
    <fullName>Refund_Method__c</fullName>
    <label>Refund Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>EFT</fullName>
            </value>
            <value>
                <fullName>Wire</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>PayPal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>