unpackaged/main/default/objects/Case/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Created as a part of 2023 R4 enhancements (US-717, 868). Used for GP Fund and Grant Cases; manually entered by the Case submitter and isn't tied to the Region object in any way</description>
    <label>Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>