unpackaged/main/default/objects/Case/fields/Reporting_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Requirements__c</fullName>
    <description>Created as a part of 2023 R4 enhancements (US-717, 868). Used for GP Fund Request and Grant Approval Cases; manually entered by the submitter. not tied to Deliverables in any systematic way</description>
    <inlineHelpText>Does the donor require detailed reporting on the use of their specific gift or is reporting at the initiative or program level?</inlineHelpText>
    <label>Reporting Requirements</label>
    <type>TextArea</type>
</CustomField>