unpackaged/main/default/objects/Case/fields/Review_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Review_Criteria__c</fullName>
    <description>Created as a part of 2023 R4 enhancements (US-741). Indicates which criteria the gift meets that requires the donor agreement to go through the formal approval process before getting signed. Manually entered by the Case submitter.</description>
    <label>Review Criteria</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lobbying Activity</fullName>
            </value>
            <value>
                <fullName>Geography Outside US/Europe</fullName>
            </value>
            <value>
                <fullName>EDF Board Member</fullName>
            </value>
            <value>
                <fullName>Audit Clauses/Claw-Back Provision</fullName>
            </value>
            <value>
                <fullName>Creation of New FTEs</fullName>
            </value>
            <value>
                <fullName>Publishing Rights/Intellectual Property</fullName>
            </value>
            <value>
                <fullName>Time Restriction</fullName>
            </value>
            <value>
                <fullName>&gt; $500K</fullName>
            </value>
            <value>
                <fullName>Challenge/Matching Components</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>