unpackaged/main/default/objects/Case/fields/Subcontract_Components__c.field-meta.xml
<CustomField>
    <fullName>Subcontract_Components__c</fullName>
    <description>Created as a part of 2023 R4 enhancements (US-717). Used for Gift Processing "Grant Approval" Cases.</description>
    <label>Subcontract Components</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>