unpackaged/main/default/objects/Case/fields/Subcontract_Components_Description__c.field-meta.xml
<CustomField>
    <fullName>Subcontract_Components_Description__c</fullName>
    <label>Subcontract Components Description</label>
    <type>TextArea</type>
</CustomField>