unpackaged/main/default/objects/Case/fields/Time_Restriction__c.field-meta.xml
<CustomField>
    <fullName>Time_Restriction__c</fullName>
    <inlineHelpText>No cost extension required for spending beyond grant end date.</inlineHelpText>
    <label>Time Restriction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>